force-app/main/default/objects/Animal_Location_Config__mdt.object
<CustomObject>
    <description>Used by locationFilter LWC to determine which locations to expose to the user for selection</description>
    <label>Animal Location Config</label>
    <pluralLabel>Animal Location Configs</pluralLabel>
</CustomObject>