force-app/main/default/objects/Animal_Location_Config__mdt/fields/Animal_Locations__c.field-meta.xml
<CustomField>
    <fullName>Animal_Locations__c</fullName>
    <description>comma separated list of animal locations (Current_Location__c)</description>
    <label>Animal Locations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>