force-app/main/default/objects/Animal_Location_Config__mdt/fields/App_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Name__c</fullName>
    <inlineHelpText>The app that the filter should be applied to</inlineHelpText>
    <label>App Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARC/CARE Dog Database</fullName>
                <default>true</default>
                <label>ARC/CARE Dog Database</label>
            </value>
            <value>
                <fullName>CRC Dog Database</fullName>
            </value>
            <value>
                <fullName>ASPCA FIR Lightning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>