force-app/main/default/objects/Animal_Location_Config__mdt/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description>The type of application the locationFilter component was added to, i.e. ToDoList, ActiveAnimal</description>
    <label>Application Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>