force-app/main/default/objects/Animal_Location_Config__mdt/fields/User_Location__c.field-meta.xml
<CustomField>
    <fullName>User_Location__c</fullName>
    <inlineHelpText>This will determine which list of animal locations is returned based on the users Location__c field</inlineHelpText>
    <label>User Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARC/CARE</fullName>
                <default>true</default>
                <label>ARC/CARE</label>
            </value>
            <value>
                <fullName>CRC/MRC</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>